# Nypus-Agent

nypus/: .gitignore  README.md  blog.md  hashtags.md  pyproject.toml  vdo_scripts.md
nypus/src/nypus/: crew.py  main.py
nypus/src/nypus/config/: agents.yaml  tasks.yaml
