[project]
name = "nypus"
version = "0.1.0"
description = "nypus using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
nypus = "nypus.main:run"
run_crew = "nypus.main:run"
train = "nypus.main:train"
replay = "nypus.main:replay"
test = "nypus.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
